# wireless-esp8266-dap

./: sdkconfig.defaults.esp32s3
components/DAP/: CMakeLists.txt
components/DAP/config/: DAP_config.h
components/DAP/include/: DAP.h  gpio_op.h
components/DAP/source/: DAP.c  SW_DP.c  spi_op.c  spi_switch.c
main/: CMakeLists.txt  cmsis_dap_v2.c  dap_configuration.h  main.c  timer.c  uart_bridge.c  wifi_configuration.h  wifi_handle.c
main/usb_cherry/: usb_config.h
main/usb_cherry/addition/: usb_cherry_platform.c
